fixing bugs in deployment

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flx_inspiring_leaders",
-  "homepage": "https://pedro15sousa.github.io/flx_inspiring_leaders",
+  "homepage": "https://clever-dubinsky-dd3f4d.netlify.app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
